# unifc

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
configs/: thinkpad_t14s_gen3.ini  thinkpad_t480.ini  thinkpad_t480_dgpu.ini
src/: main.cpp
src/config/: config.cpp  config.h
src/fan/: fan_controller.cpp  fan_controller.h
src/model/: fan_write_strategy.cpp  fan_write_strategy.h  laptop.cpp  laptop.h  laptop_factory.cpp  laptop_factory.h  register_map.h
src/protocol/: acpi_ec_protocol.cpp  acpi_ec_protocol.h  mock_protocol.cpp  mock_protocol.h  protocol.h
